Fixed issue with meta tags and some pages

--- a/public/index.html
+++ b/public/index.html
@@ -262,7 +262,7 @@ Other protocols that make up a smaller percentage are WEP, WPA, and WPA3 (curren
 
 <p class = "tab">Many WPA2 encrypted networks use PSK (Pre-Shared Key) as the method for authentication to the
 network and AES as the encryption method for the network which is provided by the router. Due to the ubiquity of WPA2-PSK 
-encryption for home routers, that's what will be discussed in this article.</p>
+encryption for home routers, that's what will be discussed in this article: How to crack WPA2 encrypted WIFI.</p>
         </div>
     
 
